more container refactoring